apps/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: sabnzbd
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sabnzbd
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: sabnzbd
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 5

          resources:
            limits:
              cpu: 15m
              memory: 841Mi
            requests:
              cpu: 15m
              memory: 729Mi

          volumeMounts:
            - mountPath: /config
              name: config-empty
              readOnly: false
            - mountPath: /mnt/media
              name: media
            - mountPath: /mnt/incomplete
              name: incomplete-storage
              subPath: sabnzbd/incomplete

      restartPolicy: Always
      volumes:
        - name: config-template
          configMap:
            name: sabnzbd-template
        - name: config-empty
          emptyDir: {}
        - name: incomplete-storage
          persistentVolumeClaim:
            claimName: rpi-nvme-pvc
        - name: media
          persistentVolumeClaim:
            claimName: smb-media-claim
      tolerations:
        - key: nvme-storage-available
          operator: Equal
          value: "true"
          effect: NoSchedule
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 30
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 30
