apps/media/sabnzbd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.x.pmcd.io`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 80
  tls:
    certResolver: pmcdio
